Update fuldført, men ikke booty flot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/webShop?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=X7913bz1h11
+spring.datasource.password=Ecology15110515
 server.port=7575
